--- a/public/index.html
+++ b/public/index.html
@@ -80,14 +80,7 @@
             object-fit: cover;
         }
 
-        .bg-container {
-            position: fixed;
-            width: 100%;
-            height: 100%;
-            background: url('https://i.pinimg.com/736x/73/ea/88/73ea88b9b0bd4a5b5f5500cde055b812.jpg') no-repeat center center/cover;
-            opacity: 0.5;
-            animation: fadeInBg 1s ease-in forwards;
-        }
+        
 
         /* Welcome text styling */
         .welcome-text {
@@ -102,6 +95,44 @@
             opacity: 0;
             margin-bottom: 30px;
             animation: fadeInText 1s ease-in 1s forwards;
+        }
+        .video-background {
+            position: fixed;
+
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: -1;
+
+            overflow: hidden;
+
+        }
+
+        .video-background video {
+            min-width: 100%;
+            min-height: 100%;
+            object-fit: cover;
+
+        }
+
+        header {
+            background-color: #fff;
+            padding: 15px 30px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+            position: fixed;
+            /* Keeps the navbar at the top */
+            width: 100%;
+            top: 0;
+            /* Ensures it sticks at the very top */
+            left: 0;
+            z-index: 1000;
+            /* Ensures it's above other elements */
+        }
+
+        body {
+            padding-top: 60px;
+            /* Adjust based on header height to prevent overlap */
         }
 
         .para1 {
@@ -180,7 +211,13 @@
     </header>
 
     <section>
-        <div class="bg-container"></div>
+        <div class="video-background">
+            <video autoplay muted loop playsinline>
+                <source src="107027-674703679_small.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
+        </div>
+        
         <div class="welcome-text">Welcome to MindCare</div>
         <p class="para1">At MindCare, we strive to provide you with the best resources to help ease your nerves, regulate your emotions, and maintain a balanced state of mind. Your mental well-being is our priority.</p>
     </section>
