--- a/public/writeblog/writeblog.html
+++ b/public/writeblog/writeblog.html
@@ -22,6 +22,14 @@
         </nav>
 
     </header>
+    <section>
+        <div class="video-background">
+            <video autoplay muted loop playsinline>
+                <source src="153483-805374158_small.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
+        </div>
+    </section>
     <!-- <div class="video-background">
         <video autoplay muted loop playsinline>
             <source src="bgv.mp4" type="video/mp4">
