--- a/public/comingsoon.html
+++ b/public/comingsoon.html
@@ -63,6 +63,25 @@
             background-color: white;
             color: #2e8b57;
         }
+        .video-background {
+            position: fixed;
+
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: -1;
+
+            overflow: hidden;
+
+        }
+
+        .video-background video {
+            min-width: 100%;
+            min-height: 100%;
+            object-fit: cover;
+
+        }
 
         /* Fade-in Animation */
         @keyframes fadeIn {
@@ -77,6 +96,14 @@
     </style>
 </head>
 <body>
+    <section>
+        <div class="video-background">
+            <video autoplay muted loop playsinline>
+                <source src="153483-805374158_small.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
+        </div>
+    </section>
 
     <div class="container">
         <h1>We're Coming Soon</h1>
