--- a/public/contact/feedback.html
+++ b/public/contact/feedback.html
@@ -209,7 +209,7 @@
     <section>
         <div class="video-background">
             <video autoplay muted loop playsinline>
-                <source src="153483-805374158_small.mp4" type="video/mp4">
+                <source src="../153483-805374158_small.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
         </div>
