--- a/public/homepage.html
+++ b/public/homepage.html
@@ -30,7 +30,7 @@
             position: absolute;
             width: 100%;
             height: 100%;
-            background: url('https://i.pinimg.com/736x/73/ea/88/73ea88b9b0bd4a5b5f5500cde055b812.jpg') no-repeat center center/cover;
+/*             background: url('https://i.pinimg.com/736x/73/ea/88/73ea88b9b0bd4a5b5f5500cde055b812.jpg') no-repeat center center/cover; */
             filter: blur(1.5px);
             z-index: -1;
         }
@@ -95,13 +95,11 @@
         }
         .video-background {
             position: fixed;
-
             top: 0;
             left: 0;
             width: 100%;
             height: 100%;
             z-index: -1;
-
             overflow: hidden;
 
         }
