--- a/public/contact/feedback.html
+++ b/public/contact/feedback.html
@@ -17,7 +17,7 @@
 
     body {
         font-family: 'Poppins', sans-serif;
-        background: url('https://i.pinimg.com/736x/73/ea/88/73ea88b9b0bd4a5b5f5500cde055b812.jpg') no-repeat center/cover;
+/*         background: url('https://i.pinimg.com/736x/73/ea/88/73ea88b9b0bd4a5b5f5500cde055b812.jpg') no-repeat center/cover; */
         display: flex;
         justify-content: center;
         align-items: center;
