--- a/public/comingsoon.html
+++ b/public/comingsoon.html
@@ -18,7 +18,7 @@
 
         /* Full Page Styling */
         body {
-            background: url('https://i.pinimg.com/736x/66/db/65/66db65ce2b67700d41383c999e1be708.jpg') no-repeat center center/cover;
+/*             background: url('https://i.pinimg.com/736x/66/db/65/66db65ce2b67700d41383c999e1be708.jpg') no-repeat center center/cover; */
             display: flex;
             justify-content: center;
             align-items: center;
