--- a/public/homepage.html
+++ b/public/homepage.html
@@ -99,8 +99,8 @@
             left: 0;
             width: 100%;
             height: 100%;
-            z-index: -1;
-            overflow: hidden;
+            z-index: -2;
+/*             overflow: hidden; */
 
         }
 
