--- a/public/homepage.html
+++ b/public/homepage.html
@@ -100,7 +100,7 @@
             width: 100%;
             height: 100%;
             z-index: -2;
-/*             overflow: hidden; */
+            overflow: hidden;
 
         }
 
@@ -142,7 +142,7 @@
     <section>
         <div class="video-background">
             <video autoplay muted loop playsinline>
-                <source src="./153483-805374158_small.mp4" type="video/mp4">
+                <source src="153483-805374158_small.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
         </div>
