--- a/public/homepage.html
+++ b/public/homepage.html
@@ -26,14 +26,14 @@
             text-shadow: 2px 2px 12px rgba(0, 0, 0, 0.4);
         }
 
-/*         .bg-container {
+        .bg-container {
             position: absolute;
             width: 100%;
             height: 100%;
-            background: url('https://i.pinimg.com/736x/73/ea/88/73ea88b9b0bd4a5b5f5500cde055b812.jpg') no-repeat center center/cover;
+/*             background: url('https://i.pinimg.com/736x/73/ea/88/73ea88b9b0bd4a5b5f5500cde055b812.jpg') no-repeat center center/cover; */
             filter: blur(1.5px);
             z-index: -1;
-        } */
+        }
 
         .content-container {
             max-width: 800px;
@@ -139,6 +139,7 @@
 
 <body>
     <a href="/emergency.html" class="emergency-btn">🚨 Emergency Help</a>
+    <div class="bg-container"></div>
     <section>
         <div class="video-background">
             <video autoplay muted loop playsinline>
