--- a/public/homepage.html
+++ b/public/homepage.html
@@ -30,7 +30,7 @@
             position: absolute;
             width: 100%;
             height: 100%;
-/*             background: url('https://i.pinimg.com/736x/73/ea/88/73ea88b9b0bd4a5b5f5500cde055b812.jpg') no-repeat center center/cover; */
+            background: url('https://i.pinimg.com/736x/73/ea/88/73ea88b9b0bd4a5b5f5500cde055b812.jpg') no-repeat center center/cover;
             filter: blur(1.5px);
             z-index: -1;
         }
@@ -140,15 +140,14 @@
 <body>
     <a href="/emergency.html" class="emergency-btn">🚨 Emergency Help</a>
     <div class="bg-container"></div>
-    <section>
+<!--     <section>
         <div class="video-background">
             <video autoplay muted loop playsinline>
                 <source src="153483-805374158_small.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
         </div>
-    </section>
-    
+    </section> -->
     <div class="content-container">
         <div class="welcome-text">Welcome to MindCare</div>
         <p class="para1">
