--- a/public/homepage.html
+++ b/public/homepage.html
@@ -93,6 +93,25 @@
             transform: scale(1.08);
             box-shadow: 0 6px 14px rgba(0, 0, 0, 0.3);
         }
+        .video-background {
+            position: fixed;
+
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: -1;
+
+            overflow: hidden;
+
+        }
+
+        .video-background video {
+            min-width: 100%;
+            min-height: 100%;
+            object-fit: cover;
+
+        }
 
         /* Background fade-in effect */
         @keyframes fadeInText {
@@ -121,8 +140,16 @@
 </head>
 
 <body>
+    <section>
+        <div class="video-background">
+            <video autoplay muted loop playsinline>
+                <source src="153483-805374158_small.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
+        </div>
+    </section>
     <a href="/emergency.html" class="emergency-btn">🚨 Emergency Help</a>
-    <div class="bg-container"></div>
+    
     <div class="content-container">
         <div class="welcome-text">Welcome to MindCare</div>
         <p class="para1">
